--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "мυʀѕι∂-χмℓ",
     "version": "2.4.0",
-    "description": "𝘊𝘶𝘴𝘵𝘰𝘮𝘪𝘻𝘢𝘣𝘭𝘦 𝘞𝘩𝘢𝘵𝘴𝘈𝘱𝘱 𝘉𝘰𝘵",
+    "description": "ㅤ",
     "depecrated": false,
     "main": "index.js",
     "directories": {
